<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/textViewLoginWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/welcome_to_task_tastic"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="168dp"
        android:src="@drawable/taskicon"
        android:contentDescription="@string/login" />

    <TextView
        android:id="@+id/textViewLoginSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewLoginUsername"
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="390sp"
        android:layout_height="65sp"
        android:gravity="center"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="388dp"
            android:layout_height="65dp"
            android:hint="@string/enter_your_username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="10sp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLoginPassword"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="390sp"
        android:layout_height="65sp"
        android:gravity="center"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="388dp"
            android:layout_height="65sp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="10sp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewLoginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#FF0000"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/loginButton"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/purplemain"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />


</LinearLayout>