<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:text="@string/user_profile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="wrap_content"
            android:layout_height="168dp"
            android:layout_marginBottom="20sp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/taskicon"
            tools:srcCompat="@drawable/taskicon" />

        <TextView
            android:id="@+id/textViewUsernameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/usernameProfile"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/goBackButtonUserProfile"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="200sp"
            android:layout_height="60sp"
            android:layout_marginBottom="30sp"
            android:text="@string/back"
            android:textColor="@color/black"
            app:backgroundTint="@color/teal_200"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraLarge" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>